--- a/style.css
+++ b/style.css
@@ -555,14 +555,14 @@ body {
 
 .recipe__fig {
   transform-origin: top;
-  height: 20rem;
+  background-color: #f9f5f3;
   position: relative;
 }
 
 .recipe__fig:before {
   content: "";
   opacity: 0.3;
-  background-color: white;
+  background-color: #f9f5f3;
   width: 100%;
   height: 100%;
   display: block;
@@ -696,10 +696,9 @@ body {
 }
 
 .recipe__directions {
+  display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5rem 10rem;
-  display: flex;
 }
 
 .recipe__directions-text {
@@ -812,3 +811,59 @@ body {
   justify-self: center;
 }
 /*# sourceMappingURL=index.f7626f62.css.map */
+.fixture {
+  width: 25rem;
+  height: 10rem;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-size: 1.4rem;
+  font-weight: bolder;
+  cursor: pointer;
+}
+.fixture__teams__event {
+  height: 100%;
+  background-color: rgb(20, 170, 70);
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.fixture__teams {
+  display: flex;
+  flex-direction: column;
+  border-right: solid 1px white;
+  width: 80%;
+}
+.home__team,
+.away__team {
+  display: flex;
+  align-items: center;
+}
+.team__logo {
+  height: 3rem;
+}
+.league__logo {
+  height: 3rem;
+}
+.fixture__event__score_status {
+}
+.league {
+  width: 77rem;
+  height: 5rem;
+  background-color: rgba(0, 0, 0, 0.808);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  color: white;
+  font-size: 1.4rem;
+}
+.fixture__container {
+  display: grid;
+  padding: 1rem 1rem 1rem 1rem;
+  grid-template-columns: auto auto auto;
+  justify-content: center;
+  gap: 1rem;
+}
