Color and Shape Formatting

--- a/carousel.css
+++ b/carousel.css
@@ -30,7 +30,7 @@
 }
 
 .date-carousel-input {
-  color: rgb(20, 170, 70);
+  color: rgba(0, 0, 0, 0.808);
   background-color: transparent;
   text-align: center;
   width: 100%;
