--- a/style.css
+++ b/style.css
@@ -816,14 +816,15 @@ body {
   height: 10rem;
   display: flex;
   flex-direction: column;
-  color: white;
+  color: rgba(0, 0, 0, 0.808);
   font-size: 1.4rem;
   font-weight: bolder;
   cursor: pointer;
 }
 .fixture__teams__event {
   height: 100%;
-  background-color: rgb(20, 170, 70);
+  background-color: white;
+  border: solid 1px rgba(0, 0, 0, 0.808);
   padding: 0.5rem 0.5rem 0.5rem 0.5rem;
   display: flex;
   align-items: center;
@@ -833,7 +834,7 @@ body {
 .fixture__teams {
   display: flex;
   flex-direction: column;
-  border-right: solid 1px white;
+  border-right: solid 1px black;
   width: 80%;
 }
 .home__team,
@@ -851,7 +852,7 @@ body {
 }
 .league {
   width: 77rem;
-  height: 5rem;
+  height: 4rem;
   background-color: rgba(0, 0, 0, 0.808);
   display: flex;
   justify-content: center;
