--- a/style.css
+++ b/style.css
@@ -252,14 +252,6 @@ body {
   display: flex;
 }
 
-.message svg,
-.error svg {
-  fill: #f38e82;
-  width: 3rem;
-  height: 3rem;
-  transform: translateY(-0.3rem);
-}
-
 .message p,
 .error p {
   margin-left: 1.5rem;
@@ -413,128 +405,15 @@ body {
   opacity: 1;
 }
 
-.preview__link:link,
-.preview__link:visited {
-  border-right: 1px solid #fff;
-  align-items: center;
-  padding: 1.5rem 3.25rem;
-  text-decoration: none;
-  transition: all 0.3s;
-  display: flex;
-}
-
-.preview__link:hover {
-  background-color: #f9f5f3;
-  transform: translateY(-2px);
-}
-
-.preview__link--active {
-  background-color: #f9f5f3;
-}
-
-.preview__fig {
-  backface-visibility: hidden;
-  border-radius: 50%;
-  flex: 0 0 5.8rem;
-  height: 5.8rem;
-  margin-right: 2rem;
-  position: relative;
-  overflow: hidden;
-}
-
-.preview__fig:before {
-  content: "";
-  opacity: 0.4;
-  background-image: linear-gradient(to bottom right, #fbdb89, #f48982);
-  width: 100%;
-  height: 100%;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.preview__fig img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  transition: all 0.3s;
-  display: block;
-}
-
-.preview__data {
-  grid-template-columns: 1fr 2rem;
-  align-items: center;
-  row-gap: 0.1rem;
-  width: 100%;
-  display: grid;
-}
-
-.preview__title {
-  color: #f38e82;
-  text-transform: uppercase;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  grid-column: 1 / -1;
-  max-width: 25rem;
-  font-size: 1.45rem;
-  font-weight: 600;
-  overflow: hidden;
-}
-
-.preview__publisher {
-  color: #918581;
-  text-transform: uppercase;
-  font-size: 1.15rem;
-  font-weight: 600;
-}
-
-.preview__user-generated {
-  background-color: #eeeae8;
-  border-radius: 10rem;
-  justify-content: center;
-  align-items: center;
-  width: 2rem;
-  height: 2rem;
-  margin-left: auto;
-  margin-right: 1.75rem;
-  display: flex;
-}
-
-.preview__user-generated svg {
-  fill: #f38e82;
-  width: 1.2rem;
-  height: 1.2rem;
-}
-
 .search-results {
   flex-direction: column;
   padding: 3rem 0;
   display: flex;
 }
 
-.results {
-  margin-bottom: 2rem;
-  list-style: none;
-}
-
 .pagination {
   margin-top: auto;
   padding: 0 3.5rem;
-}
-
-.pagination:after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.pagination__btn--prev {
-  float: left;
-}
-
-.pagination__btn--next {
-  float: right;
 }
 
 .copyright {
@@ -571,128 +450,10 @@ body {
   left: 0;
 }
 
-.recipe__img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  display: block;
-}
-
-.recipe__title {
-  color: #fff;
-  text-transform: uppercase;
-  text-align: center;
-  width: 50%;
-  font-size: 3.25rem;
-  font-weight: 700;
-  line-height: 1.95;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 20%) skewY(-6deg);
-  display: flex;
-  flex-direction: column;
-}
-
-.recipe__title span {
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
-  background-image: linear-gradient(to bottom right, #fbdb89, #f48982);
-  padding: 1.3rem 2rem;
-}
-
 @media only screen and (width <= 61.25em) {
   .recipe__title {
     width: 70%;
   }
-}
-
-.recipe__details {
-  align-items: center;
-  padding: 7.5rem 8rem 3.5rem;
-  display: flex;
-}
-
-.recipe__info {
-  text-transform: uppercase;
-  align-items: center;
-  font-size: 1.65rem;
-  display: flex;
-}
-
-.recipe__info:not(:last-child) {
-  margin-right: 4.5rem;
-}
-
-.recipe__info-icon {
-  fill: #f38e82;
-  width: 2.35rem;
-  height: 2.35rem;
-  margin-right: 1.15rem;
-}
-
-.recipe__info-data {
-  margin-right: 0.5rem;
-  font-weight: 700;
-}
-
-.recipe__info-buttons {
-  margin-left: 1.6rem;
-  display: flex;
-  transform: translateY(-1px);
-}
-
-.recipe__user-generated {
-  background-color: #eeeae8;
-  border-radius: 10rem;
-  justify-content: center;
-  align-items: center;
-  width: 4rem;
-  height: 4rem;
-  margin-left: auto;
-  margin-right: 1.75rem;
-  display: flex;
-}
-
-.recipe__user-generated svg {
-  fill: #f38e82;
-  width: 2.25rem;
-  height: 2.25rem;
-}
-
-.recipe__ingredients {
-  background-color: #f2efee;
-  flex-direction: column;
-  align-items: center;
-  padding: 5rem 8rem;
-  font-size: 1.6rem;
-  line-height: 1.4;
-  display: flex;
-}
-
-.recipe__ingredient-list {
-  grid-template-columns: 1fr 1fr;
-  gap: 2.5rem 3rem;
-  list-style: none;
-  display: grid;
-}
-
-.recipe__ingredient {
-  display: flex;
-}
-
-.recipe__icon {
-  fill: #f38e82;
-  flex: none;
-  width: 2rem;
-  height: 2rem;
-  margin-top: 0.1rem;
-  margin-right: 1.1rem;
-}
-
-.recipe__quantity {
-  flex: none;
-  margin-right: 0.5rem;
 }
 
 .recipe__directions {
@@ -738,78 +499,11 @@ body {
   right: 1.6rem;
 }
 
-.overlay {
-  backdrop-filter: blur(4px);
-  z-index: 100;
-  background-color: #0006;
-  width: 100%;
-  height: 100%;
-  transition: all 0.5s;
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
 .hidden {
   visibility: hidden;
   opacity: 0;
 }
 
-.upload {
-  grid-template-columns: 1fr 1fr;
-  gap: 4rem 6rem;
-  display: grid;
-}
-
-.upload__column {
-  grid-template-columns: 1fr 2.8fr;
-  align-items: center;
-  gap: 1.5rem;
-  display: grid;
-}
-
-.upload__column label {
-  color: inherit;
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-
-.upload__column input {
-  border: 1px solid #ddd;
-  border-radius: 0.5rem;
-  padding: 0.8rem 1rem;
-  font-size: 1.5rem;
-  transition: all 0.2s;
-}
-
-.upload__column input::placeholder {
-  color: #d3c7c3;
-}
-
-.upload__column input:focus {
-  background-color: #f9f5f3;
-  border: 1px solid #f38e82;
-  outline: none;
-}
-
-.upload__column button {
-  grid-column: 1 / span 2;
-  justify-self: center;
-  margin-top: 1rem;
-}
-
-.upload__heading {
-  text-transform: uppercase;
-  grid-column: 1 / -1;
-  margin-bottom: 1rem;
-  font-size: 2.25rem;
-  font-weight: 700;
-}
-
-.upload__btn {
-  grid-column: 1 / -1;
-  justify-self: center;
-}
 /*# sourceMappingURL=index.f7626f62.css.map */
 .fixture {
   width: 25rem;
@@ -820,11 +514,18 @@ body {
   font-size: 1.4rem;
   font-weight: bolder;
   cursor: pointer;
+  transition: transform 0.3s ease;
+}
+.fixture__container {
+  margin-bottom: 3rem;
+}
+.fixture:hover {
+  transform: translateY(-5px);
 }
 .fixture__teams__event {
   height: 100%;
   background-color: white;
-  border: solid 1px rgba(0, 0, 0, 0.808);
+  border: solid 1px rgb(20, 170, 70);
   padding: 0.5rem 0.5rem 0.5rem 0.5rem;
   display: flex;
   align-items: center;
@@ -853,13 +554,15 @@ body {
 .league {
   width: 77rem;
   height: 4rem;
-  background-color: rgba(0, 0, 0, 0.808);
+  border-top: solid 4px rgb(20, 170, 70);
+  border-radius: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  color: white;
-  font-size: 1.4rem;
+  color: rgba(0, 0, 0, 0.808);
+  font-weight: bolder;
+  font-size: 1.8rem;
 }
 .fixture__container {
   display: grid;
