--- a/style.css
+++ b/style.css
@@ -525,17 +525,20 @@ body {
 .fixture__teams__event {
   height: 100%;
   background-color: white;
-  border: solid 1px rgb(20, 170, 70);
+  border: solid 2px rgba(0, 0, 0, 0.808);
   padding: 0.5rem 0.5rem 0.5rem 0.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-radius: 9px;
 }
-
+.fixture__teams__event:hover {
+  box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.808);
+}
 .fixture__teams {
   display: flex;
   flex-direction: column;
-  border-right: solid 1px black;
+  border-right: solid 1px rgba(0, 0, 0, 0.808);
   width: 80%;
 }
 .home__team,
@@ -554,8 +557,6 @@ body {
 .league {
   width: 77rem;
   height: 4rem;
-  border-top: solid 4px rgb(20, 170, 70);
-  border-radius: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
